# assignment1ENSC351

./: README.md  as1-capture.txt
cmake_starter/app/: CMakeLists.txt
cmake_starter/app/src/: main.c  reaction_timer.c
cmake_starter/hal/include/hal/: joystickSPI.h  led.h
cmake_starter/hal/src/: joystickSPI.c  led.c
